Fixed visual bug on mobile, better legal section

--- a/global.css
+++ b/global.css
@@ -7,8 +7,14 @@ body {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
   font-size: 16px;
   background-color: #fbfcfd;
+  width: 100%;
 }
 
+ul > li{
+  list-style-type: disc;
+  margin-left: 1em;
+  margin-top: 5px;
+}
 .gradient {
   background: linear-gradient(90deg, #e4608c 0%, #9367e6 100%);
 }
@@ -21,8 +27,8 @@ body {
   margin: 1em;
 }
 .legal h1{
-  font-weight: 800;
-  font-size: 22px;
+  font-weight: 700;
+  font-size: 24px;
 }
 .legal h2{
   font-weight: 700;
